@@ -1,11 +1,17 @@
 package com.thang.tools.task;
 
 import java.io.File;
-import java.net.URI;
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.net.URL;
 
+import org.apache.commons.io.input.XmlStreamReader;
+import org.apache.commons.io.output.XmlStreamWriter;
 import org.quartz.Job;
 import org.quartz.JobExecutionContext;
 import org.quartz.JobExecutionException;
+
+import com.thang.tools.util.ConfigUtils;
 
 
 public class RssTask implements Job{
@@ -17,7 +23,8 @@ public class RssTask implements Job{
 	 */
 	@Override
 	public void execute(JobExecutionContext jobEc) throws JobExecutionException {
-		
+		obtainBaiduRss();
+		obtainQQRss();
 	}
 	
 	/**
@@ -27,22 +34,43 @@ public class RssTask implements Job{
 		
 	}
 	
-	/**
-	 * 
-	 */
 	private void obtainQQRss(){
 		//国内新闻
-		String[] urls={"http://news.qq.com/newsgn/rss_newsgn.xml"};
+		String[] urls={
+				        "http://news.qq.com/newsgn/rss_newsgn.xml",
+				        "http://sports.qq.com/rss_newssports.xml",
+				        "http://digi.tech.qq.com/mobile/mobilepk/rss_mobilepk.xml"
+		              };
 		try{
-		    File file=null;
+		    
+		    char[] cs=new char[1];
+		    int k=0;
+		    
+		    XmlStreamReader xmlReader=null;
+		    XmlStreamWriter xmlWriter=null;
 		    for(String url:urls){
-			    file=new File(new URI(url));
-			    
+			    if(null!=xmlReader){
+			    	xmlReader.close();
+			    }
+			    if(null!=xmlWriter){
+			    	xmlWriter.close();
+			    }
+			    xmlReader=new XmlStreamReader(new URL(url));
+			    xmlWriter=new XmlStreamWriter(new File(ConfigUtils.getConfig("rss_dir")+"/"+url.substring(url.lastIndexOf("/"))));
+			    k=0;
+			    while(-1!=k){
+			    	k=xmlReader.read(cs);
+			    	xmlWriter.write(cs);
+			    }
 		    }
+		    
+		    xmlReader.close();
+		    xmlWriter.close();
 		}catch(Exception e){
 			e.printStackTrace();
 		}
 		
 	}
+	
 	
 }
